--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-utils",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest watch",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,10 +13,23 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.6.0",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vitest": "^0.22.1"
   }
 }
