--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["vitest/globals"],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   },
-  "include": ["src"],
+  "include": ["./**/*.ts", "./**/*.tsx", "./**/*.json"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
