--- a/package.json
+++ b/package.json
@@ -1,35 +1,68 @@
 {
-  "name": "react-utils",
+  "name": "@astrosat/react-utils",
   "private": true,
   "version": "0.0.0",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/react-utils.umd.js",
+  "module": "./dist/react-utils.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/react-utils.es.js",
+      "require": "./dist/react-utils.umd.js"
+    }
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "test": "vitest watch",
+    "test:coverage": "vitest run --coverage",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf coverage dist node_modules",
+    "release": "yarn clean && yarn && yarn build && semantic-release"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@testing-library/dom": "^8.17.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.7",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.6.1",
     "eslint-plugin-testing-library": "^5.6.0",
+    "jsdom": "^20.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^4.6.4",
+    "semantic-release": "^19.0.5",
+    "tailwindcss": "^3.1.8",
+    "tailwindcss-debug-screens": "^2.2.1",
+    "typescript": "^4.8.2",
     "vite": "^3.0.7",
+    "vite-plugin-dts": "^1.4.1",
     "vitest": "^0.22.1"
   }
 }
