--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     }
   },
-  "include": ["./**/*.ts", "./**/*.tsx", "./**/*.json"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
