--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "@astrosat/react-utils",
-  "private": true,
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/astrosat/react-utils.git"
+  },
+  "bugs": {
+    "url": "https://github.com/astrosat/react-utils/issues"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "files": [
     "dist"
   ],
