--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/astrosat/react-utils.git"
+    "url": "git+https://github.com/astrosat/react-utils.git"
   },
+  "keywords": [
+    "react",
+    "util",
+    "components",
+    "hooks"
+  ],
+  "author": "Mark Small <marksmall@gmx.com",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/astrosat/react-utils/issues"
   },
+  "homepage": "https://github.com/astrosat/react-utils@readme",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
