--- a/package.json
+++ b/package.json
@@ -38,23 +38,41 @@
     "test:coverage": "vitest run --coverage",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
     "clean": "rm -rf coverage dist node_modules",
     "release": "yarn clean && yarn && yarn build && semantic-release"
   },
   "dependencies": {
+    "cross-fetch": "^3.1.5",
+    "daisyui": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "peerDependencies": {
+    "cross-fetch": "^3.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@astrosat/eslint-config-astrosat": "^1.1.3",
+    "@astrosat/prettier-config": "^1.1.2",
+    "@astrosat/semantic-release-config": "^1.1.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-vite": "^0.2.2",
+    "@storybook/react": "^6.5.12",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -63,24 +81,29 @@
     "autoprefixer": "^10.4.8",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest-dom": "^4.0.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.7",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-tailwindcss": "^3.6.1",
     "eslint-plugin-testing-library": "^5.6.0",
     "jsdom": "^20.0.0",
+    "msw": "^0.47.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react-test-renderer": "^18.2.0",
     "semantic-release": "^19.0.5",
+    "storybook-react-i18next": "^1.1.2",
     "tailwindcss": "^3.1.8",
     "tailwindcss-debug-screens": "^2.2.1",
-    "typescript": "^4.8.2",
+    "typescript": "^4.8.3",
     "vite": "^3.0.7",
     "vite-plugin-dts": "^1.4.1",
-    "vitest": "^0.22.1"
+    "vitest": "^0.23.4"
   }
 }
