--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@astrosat/eslint-config-astrosat": "^1.1.3",
     "@astrosat/prettier-config": "^1.1.2",
     "@astrosat/semantic-release-config": "^1.1.2",
+    "@rollup/plugin-typescript": "^8.5.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@storybook/addon-actions": "^6.5.12",
