fix(project): Exclude test related code from builds
Added these areas to be excluded allows build to work.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,16 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
-    }
+    },
+    "outDir": "dist",
+    "declaration": true
   },
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "./src/{stories,mocks}/**/*.ts",
+    "./src/{stories,mocks}/**/*.tsx",
+    "./cypress/*"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
