WIP feat(frontend): Some Title text
Describe why you did what you did

IssueID #

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     ".": {
       "import": "./dist/react-utils.es.js",
       "require": "./dist/react-utils.umd.js"
-    }
+    },
+    "./dist/style.css": "./dist/style.css"
   },
+  "sideEffects": false,
   "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
