fix(devops): Fix action never ending
Because we have our tests in watch mode, they never end, this is
great for local development but not for CI. I have therefore added
another script to run tests in CI.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "dev": "vite",
     "test": "vitest watch",
+    "test:ci": "vitest run",
     "test:coverage": "vitest run --coverage",
     "build": "rm -rf dist && tsc && vite build",
     "preview": "vite preview",
