--- a/.github/workflows/githubnpmpublish.yml
+++ b/.github/workflows/githubnpmpublish.yml
@@ -17,7 +17,7 @@ jobs:
           scope: '@astrosat'
       - run: |
           yarn install
-          yarn test
+          yarn test:ci
           yarn build
           yarn publish
         env:
