--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react-test-renderer": "^18.2.0",
     "semantic-release": "^19.0.5",
+    "storybook-addon-themes": "^6.1.0",
     "storybook-react-i18next": "^1.1.2",
     "tailwindcss": "^3.1.8",
     "tailwindcss-debug-screens": "^2.2.1",
